--- a/.github/workflows/dirty-waters.yml
+++ b/.github/workflows/dirty-waters.yml
@@ -52,7 +52,7 @@ jobs:
       - name: Run Static Dirty Waters analysis
         continue-on-error: true
         if: steps.check-first-run.outputs.is_first_run == 'true'
-        uses: chains-project/dirty-waters-action@450baaac3fca01dd4617c4281b87454c00d95968
+        uses: chains-project/dirty-waters-action@9c5be53bec11c25eec7d08eeeb1719ec2ebbd89d
         with:
           # example args, change as needed
           # dirty_waters_version: 3b83ec05b4072e43e65a2ad95b33d9523e0dbda3
@@ -60,11 +60,12 @@ jobs:
           project_repo: ${{ github.repository }}
           package_manager: maven # Change this according to your project
           comment_on_commit: true # Optional: comments on commits (outside PRs) if high severity issues are found
+          latest_commit_sha: ${{ github.sha }}
 
       - name: Run Differential Dirty Waters Analysis
         continue-on-error: true
         if: ${{ !(steps.check-first-run.outputs.is_first_run == 'true') }}
-        uses: chains-project/dirty-waters-action@450baaac3fca01dd4617c4281b87454c00d95968
+        uses: chains-project/dirty-waters-action@9c5be53bec11c25eec7d08eeeb1719ec2ebbd89d
         with:
           # example args, change as needed
           # dirty_waters_version: 3b83ec05b4072e43e65a2ad95b33d9523e0dbda3
@@ -74,6 +75,7 @@ jobs:
           differential_analysis: false
           package_manager: maven # Change this according to your project
           comment_on_commit: true # Optional: comments on commits (outside PRs) if high severity issues are found
+          latest_commit_sha: ${{ github.sha }}
 
       - name: Save Dirty Waters database cache
         id: save-cache
