--- a/.github/workflows/dirty-waters.yml
+++ b/.github/workflows/dirty-waters.yml
@@ -4,6 +4,12 @@ on:
   pull_request:
   push:
     branches: [ master ]
+  workflow_dispatch:
+    inputs:
+      ignore_cache:
+        description: "Ignore the repository cache for this run"
+        required: false
+        default: "false"
 
 jobs:
   dirty-waters:
@@ -19,7 +25,7 @@ jobs:
           distribution: 'temurin'
           java-version: '17'
       - name: Dirty Waters Analysis
-        uses: chains-project/dirty-waters-action@v1.6
+        uses: chains-project/dirty-waters-action@v1.7
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           package_manager: maven
