--- a/.github/workflows/dirty-waters.yml
+++ b/.github/workflows/dirty-waters.yml
@@ -25,11 +25,8 @@ jobs:
           distribution: 'temurin'
           java-version: '17'
       - name: Dirty Waters Analysis
-        uses: chains-project/dirty-waters-action@v1.10
+        uses: chains-project/dirty-waters-action@v0a9f1d05e98439e9c98d9ab255cbb59ccb63e502
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           package_manager: maven
-          project_repo: ${{ github.repository }}
-          latest_commit_sha: ${{ github.sha }}
-          github_event_before: ${{ github.event.before }}
-          no_gradual_report: true
+          #no_gradual_report: true
