--- a/.github/workflows/dirty-waters.yml
+++ b/.github/workflows/dirty-waters.yml
@@ -25,9 +25,10 @@ jobs:
           distribution: 'temurin'
           java-version: '17'
       - name: Dirty Waters Analysis
-        uses: chains-project/dirty-waters-action@128a52f69e01a1adfb53c4e2e45accbfbef6f9ec
+        uses: chains-project/dirty-waters-action@2d1617e5a7d34a071d3e7559b3b4e5203ca748a6
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           package_manager: maven
           #no_gradual_report: true
+          gradual_report: false
           comment_on_commit: true
