--- a/spoon-control-flow/pom.xml
+++ b/spoon-control-flow/pom.xml
@@ -18,7 +18,7 @@
     <parent>
         <groupId>fr.inria.gforge.spoon</groupId>
         <artifactId>spoon-pom</artifactId>
-        <version>11.2.1-SNAPSHOT</version>
+        <version>11.2.1</version>
         <relativePath>../spoon-pom</relativePath>
     </parent>
     
