--- a/spoon-javadoc/pom.xml
+++ b/spoon-javadoc/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>spoon-pom</artifactId>
         <groupId>fr.inria.gforge.spoon</groupId>
-        <version>11.2.1-SNAPSHOT</version>
+        <version>11.2.0</version>
         <relativePath>../spoon-pom</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
