verify, sign, and do all things which Maven necessitate

--- a/jreleaser.yml
+++ b/jreleaser.yml
@@ -42,6 +42,7 @@ deploy:
       sonatype:
         active: ALWAYS
         url: https://central.sonatype.com/api/v1/publisher
+        applyMavenCentralRules: true
         stagingRepositories:
           - target/staging-deploy
     nexus2:
