--- a/jreleaser.yml
+++ b/jreleaser.yml
@@ -1,9 +1,9 @@
 project:
   name: spoon
-  description: Spoon is an open-source library to analyze, rewrite, transform, transpile Java source code. 
-  longDescription: Spoon is an open-source library to analyze, rewrite, transform, transpile Java source code. 
-                   It parses source files to build a well-designed AST with powerful analysis and transformation API. 
-                   It supports modern Java versions up to Java 20.
+  description: Spoon is an open-source library to analyze, rewrite, transform, transpile Java source code.
+  longDescription: Spoon is an open-source library to analyze, rewrite, transform, transpile Java source code.
+    It parses source files to build a well-designed AST with powerful analysis and transformation API.
+    It supports modern Java versions up to Java 20.
   authors:
     - monperrus
     - nharrand
@@ -38,14 +38,20 @@ signing:
   armored: true
 deploy:
   maven:
-    nexus2:
-      maven-central:
+    mavenCentral:
+      sonatype:
         active: ALWAYS
-        # Spoon is hosted on the legacy sonatype instance, see
-        # https://central.sonatype.org/publish/publish-guide/#releasing-to-central
-        url: https://oss.sonatype.org/service/local
-        snapshotUrl: https://oss.sonatype.org/content/repositories/snapshots
+        url: https://central.sonatype.com/api/v1/publisher
+        applyMavenCentralRules: true
+        stagingRepositories:
+          - target/staging-deploy
+    nexus2:
+      snapshot-deploy:
+        active: ALWAYS
+        snapshotUrl: https://central.sonatype.com/repository/maven-snapshots/
+        applyMavenCentralRules: true
+        snapshotSupported: true
         closeRepository: true
-        releaseRepository: true
+        releaseRepository: false # for the first trial, we do a manual click on the Sonatype UI to release
         stagingRepositories:
           - target/staging-deploy
