--- a/.github/workflows/jreleaser.yml
+++ b/.github/workflows/jreleaser.yml
@@ -35,10 +35,15 @@ jobs:
           JRELEASER_DEPLOY_MAVEN_MAVENCENTRAL_SONATYPE_USERNAME: ${{ secrets.JRELEASER_DEPLOY_MAVEN_MAVENCENTRAL_SONATYPE_USERNAME }}
           JRELEASER_DEPLOY_MAVEN_MAVENCENTRAL_SONATYPE_TOKEN: ${{ secrets.JRELEASER_DEPLOY_MAVEN_MAVENCENTRAL_SONATYPE_TOKEN }}
 
+      - name: Prepare Signature Subject Checksums
+        run: |
+          cd target/staging-deploy
+          sha256sum $(find fr -type f -not -name maven-metadata.xml -not -name '*.md5' -not -name '*.sha1' -print) > ../subject-checksums.txt
+
       - name: Sign artifacts with sigstore/cosign
         uses: actions/attest-build-provenance@977bb373ede98d70efdf65b84cb5f73e068dcc2a # v3.0.0
         with:
-          subject-path: './target/staging-deploy/**/*.jar'
+          subject-checksums: './target/subject-checksums.txt'
 
         # Log failures
       - name: JReleaser release output
